--- a/bountifulFoods/fresh.html
+++ b/bountifulFoods/fresh.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="styles/small.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
+    <link type="text/css" rel="stylesheet" href="styles/large.css">
     <title>Fresh | Bountiful Foods</title>
 </head>
 
@@ -38,140 +39,140 @@
     </header>
     <main>
         <form>
-            <div><label>First Name:<br><input id="firstName" type="text"></label></div>
-            <div><label>Email:<input id="email" type="email"></label></div>
-            <div><label>Phone:<input id="phoneNumber" type="tel"></label></div>
+            <div><label>First Name:<br><input class="text" id="firstName" type="text"></label></div>
+            <div><label>Email:<br><input class="text" id="email" type="email"></label></div>
+            <div><label>Phone:<br><input class="text" id="phoneNumber" type="tel"></label></div>
             <div>
-            <select id="fruitOptionOne" name="fruitOptionOne">
-                <option class="fruitOne"></option>
-                <option class="fruitTwo"></option>
-                <option class="fruitThree"></option>
-                <option class="fruitFour"></option>
-                <option class="fruitFive"></option>
-                <option class="fruitSix"></option>
-                <option class="fruitSeven"></option>
-                <option class="fruitEight"></option>
-                <option class="fruitNine"></option>
-                <option class="fruitTen"></option>
-                <option class="fruitEleven"></option>
-                <option class="fruitTwelve"></option>
-                <option class="fruitThirteen"></option>
-                <option class="fruitFourteen"></option>
-                <option class="fruitFifteen"></option>
-                <option class="fruitSixteen"></option>
-                <option class="fruitSeventeen"></option>
-                <option class="fruitEighteen"></option>
-                <option class="fruitNineteen"></option>
-                <option class="fruitTwenty"></option>
-                <option class="fruitTwentyOne"></option>
-                <option class="fruitTwentyTwo"></option>
-                <option class="fruitTwentyThree"></option>
-                <option class="fruitTwentyFour"></option>
-                <option class="fruitTwentyFive"></option>
-                <option class="fruitTwentySix"></option>
-                <option class="fruitTwentySeven"></option>
-                <option class="fruitTwentyEight"></option>
-                <option class="fruitTwentyNine"></option>
-                <option class="fruitThirty"></option>
-                <option class="fruitThirtyOne"></option>
-                <option class="fruitThirtyTwo"></option>
-                <option class="fruitThirtyThree"></option>
-                <option class="fruitThirtyFour"></option>
-                <option class="fruitThirtyFive"></option>
-                <option class="fruitThirtySix"></option>
-                <option class="fruitThirtySeven"></option>
-                <option class="fruitThirtyEight"></option>
-                <option class="fruitThirtyNine"></option>
-            </select>
+                <select id="fruitOptionOne" name="fruitOptionOne">
+                    <option class="fruitOne"></option>
+                    <option class="fruitTwo"></option>
+                    <option class="fruitThree"></option>
+                    <option class="fruitFour"></option>
+                    <option class="fruitFive"></option>
+                    <option class="fruitSix"></option>
+                    <option class="fruitSeven"></option>
+                    <option class="fruitEight"></option>
+                    <option class="fruitNine"></option>
+                    <option class="fruitTen"></option>
+                    <option class="fruitEleven"></option>
+                    <option class="fruitTwelve"></option>
+                    <option class="fruitThirteen"></option>
+                    <option class="fruitFourteen"></option>
+                    <option class="fruitFifteen"></option>
+                    <option class="fruitSixteen"></option>
+                    <option class="fruitSeventeen"></option>
+                    <option class="fruitEighteen"></option>
+                    <option class="fruitNineteen"></option>
+                    <option class="fruitTwenty"></option>
+                    <option class="fruitTwentyOne"></option>
+                    <option class="fruitTwentyTwo"></option>
+                    <option class="fruitTwentyThree"></option>
+                    <option class="fruitTwentyFour"></option>
+                    <option class="fruitTwentyFive"></option>
+                    <option class="fruitTwentySix"></option>
+                    <option class="fruitTwentySeven"></option>
+                    <option class="fruitTwentyEight"></option>
+                    <option class="fruitTwentyNine"></option>
+                    <option class="fruitThirty"></option>
+                    <option class="fruitThirtyOne"></option>
+                    <option class="fruitThirtyTwo"></option>
+                    <option class="fruitThirtyThree"></option>
+                    <option class="fruitThirtyFour"></option>
+                    <option class="fruitThirtyFive"></option>
+                    <option class="fruitThirtySix"></option>
+                    <option class="fruitThirtySeven"></option>
+                    <option class="fruitThirtyEight"></option>
+                    <option class="fruitThirtyNine"></option>
+                </select>
             </div>
             <div>
-            <select id="fruitOptionTwo" name="fruitOptionTwo">
-                <option class="secondfruitOne"></option>
-                <option class="secondfruitTwo"></option>
-                <option class="secondfruitThree"></option>
-                <option class="secondfruitFour"></option>
-                <option class="secondfruitFive"></option>
-                <option class="secondfruitSix"></option>
-                <option class="secondfruitSeven"></option>
-                <option class="secondfruitEight"></option>
-                <option class="secondfruitNine"></option>
-                <option class="secondfruitTen"></option>
-                <option class="secondfruitEleven"></option>
-                <option class="secondfruitTwelve"></option>
-                <option class="secondfruitThirteen"></option>
-                <option class="secondfruitFourteen"></option>
-                <option class="secondfruitFifteen"></option>
-                <option class="secondfruitSixteen"></option>
-                <option class="secondfruitSeventeen"></option>
-                <option class="secondfruitEighteen"></option>
-                <option class="secondfruitNineteen"></option>
-                <option class="secondfruitTwenty"></option>
-                <option class="secondfruitTwentyOne"></option>
-                <option class="secondfruitTwentyTwo"></option>
-                <option class="secondfruitTwentyThree"></option>
-                <option class="secondfruitTwentyFour"></option>
-                <option class="secondfruitTwentyFive"></option>
-                <option class="secondfruitTwentySix"></option>
-                <option class="secondfruitTwentySeven"></option>
-                <option class="secondfruitTwentyEight"></option>
-                <option class="secondfruitTwentyNine"></option>
-                <option class="secondfruitThirty"></option>
-                <option class="secondfruitThirtyOne"></option>
-                <option class="secondfruitThirtyTwo"></option>
-                <option class="secondfruitThirtyThree"></option>
-                <option class="secondfruitThirtyFour"></option>
-                <option class="secondfruitThirtyFive"></option>
-                <option class="secondfruitThirtySix"></option>
-                <option class="secondfruitThirtySeven"></option>
-                <option class="secondfruitThirtyEight"></option>
-                <option class="secondfruitThirtyNine"></option>
-            </select>
+                <select id="fruitOptionTwo" name="fruitOptionTwo">
+                    <option class="secondfruitOne"></option>
+                    <option class="secondfruitTwo"></option>
+                    <option class="secondfruitThree"></option>
+                    <option class="secondfruitFour"></option>
+                    <option class="secondfruitFive"></option>
+                    <option class="secondfruitSix"></option>
+                    <option class="secondfruitSeven"></option>
+                    <option class="secondfruitEight"></option>
+                    <option class="secondfruitNine"></option>
+                    <option class="secondfruitTen"></option>
+                    <option class="secondfruitEleven"></option>
+                    <option class="secondfruitTwelve"></option>
+                    <option class="secondfruitThirteen"></option>
+                    <option class="secondfruitFourteen"></option>
+                    <option class="secondfruitFifteen"></option>
+                    <option class="secondfruitSixteen"></option>
+                    <option class="secondfruitSeventeen"></option>
+                    <option class="secondfruitEighteen"></option>
+                    <option class="secondfruitNineteen"></option>
+                    <option class="secondfruitTwenty"></option>
+                    <option class="secondfruitTwentyOne"></option>
+                    <option class="secondfruitTwentyTwo"></option>
+                    <option class="secondfruitTwentyThree"></option>
+                    <option class="secondfruitTwentyFour"></option>
+                    <option class="secondfruitTwentyFive"></option>
+                    <option class="secondfruitTwentySix"></option>
+                    <option class="secondfruitTwentySeven"></option>
+                    <option class="secondfruitTwentyEight"></option>
+                    <option class="secondfruitTwentyNine"></option>
+                    <option class="secondfruitThirty"></option>
+                    <option class="secondfruitThirtyOne"></option>
+                    <option class="secondfruitThirtyTwo"></option>
+                    <option class="secondfruitThirtyThree"></option>
+                    <option class="secondfruitThirtyFour"></option>
+                    <option class="secondfruitThirtyFive"></option>
+                    <option class="secondfruitThirtySix"></option>
+                    <option class="secondfruitThirtySeven"></option>
+                    <option class="secondfruitThirtyEight"></option>
+                    <option class="secondfruitThirtyNine"></option>
+                </select>
             </div>
             <div>
-            <select id="fruitOptionThree" name="fruitOptionThree">
-                <option class="thirdfruitOne"></option>
-                <option class="thirdfruitTwo"></option>
-                <option class="thirdfruitThree"></option>
-                <option class="thirdfruitFour"></option>
-                <option class="thirdfruitFive"></option>
-                <option class="thirdfruitSix"></option>
-                <option class="thirdfruitSeven"></option>
-                <option class="thirdfruitEight"></option>
-                <option class="thirdfruitNine"></option>
-                <option class="thirdfruitTen"></option>
-                <option class="thirdfruitEleven"></option>
-                <option class="thirdfruitTwelve"></option>
-                <option class="thirdfruitThirteen"></option>
-                <option class="thirdfruitFourteen"></option>
-                <option class="thirdfruitFifteen"></option>
-                <option class="thirdfruitSixteen"></option>
-                <option class="thirdfruitSeventeen"></option>
-                <option class="thirdfruitEighteen"></option>
-                <option class="thirdfruitNineteen"></option>
-                <option class="thirdfruitTwenty"></option>
-                <option class="thirdfruitTwentyOne"></option>
-                <option class="thirdfruitTwentyTwo"></option>
-                <option class="thirdfruitTwentyThree"></option>
-                <option class="thirdfruitTwentyFour"></option>
-                <option class="thirdfruitTwentyFive"></option>
-                <option class="thirdfruitTwentySix"></option>
-                <option class="thirdfruitTwentySeven"></option>
-                <option class="thirdfruitTwentyEight"></option>
-                <option class="thirdfruitTwentyNine"></option>
-                <option class="thirdfruitThirty"></option>
-                <option class="thirdfruitThirtyOne"></option>
-                <option class="thirdfruitThirtyTwo"></option>
-                <option class="thirdfruitThirtyThree"></option>
-                <option class="thirdfruitThirtyFour"></option>
-                <option class="thirdfruitThirtyFive"></option>
-                <option class="thirdfruitThirtySix"></option>
-                <option class="thirdfruitThirtySeven"></option>
-                <option class="thirdfruitThirtyEight"></option>
-                <option class="thirdfruitThirtyNine"></option>
-            </select>
+                <select id="fruitOptionThree" name="fruitOptionThree">
+                    <option class="thirdfruitOne"></option>
+                    <option class="thirdfruitTwo"></option>
+                    <option class="thirdfruitThree"></option>
+                    <option class="thirdfruitFour"></option>
+                    <option class="thirdfruitFive"></option>
+                    <option class="thirdfruitSix"></option>
+                    <option class="thirdfruitSeven"></option>
+                    <option class="thirdfruitEight"></option>
+                    <option class="thirdfruitNine"></option>
+                    <option class="thirdfruitTen"></option>
+                    <option class="thirdfruitEleven"></option>
+                    <option class="thirdfruitTwelve"></option>
+                    <option class="thirdfruitThirteen"></option>
+                    <option class="thirdfruitFourteen"></option>
+                    <option class="thirdfruitFifteen"></option>
+                    <option class="thirdfruitSixteen"></option>
+                    <option class="thirdfruitSeventeen"></option>
+                    <option class="thirdfruitEighteen"></option>
+                    <option class="thirdfruitNineteen"></option>
+                    <option class="thirdfruitTwenty"></option>
+                    <option class="thirdfruitTwentyOne"></option>
+                    <option class="thirdfruitTwentyTwo"></option>
+                    <option class="thirdfruitTwentyThree"></option>
+                    <option class="thirdfruitTwentyFour"></option>
+                    <option class="thirdfruitTwentyFive"></option>
+                    <option class="thirdfruitTwentySix"></option>
+                    <option class="thirdfruitTwentySeven"></option>
+                    <option class="thirdfruitTwentyEight"></option>
+                    <option class="thirdfruitTwentyNine"></option>
+                    <option class="thirdfruitThirty"></option>
+                    <option class="thirdfruitThirtyOne"></option>
+                    <option class="thirdfruitThirtyTwo"></option>
+                    <option class="thirdfruitThirtyThree"></option>
+                    <option class="thirdfruitThirtyFour"></option>
+                    <option class="thirdfruitThirtyFive"></option>
+                    <option class="thirdfruitThirtySix"></option>
+                    <option class="thirdfruitThirtySeven"></option>
+                    <option class="thirdfruitThirtyEight"></option>
+                    <option class="thirdfruitThirtyNine"></option>
+                </select>
             </div>
             <div>
-                <label>Special Instructions:
+                <label>Special Instructions:<br>
                     <textarea id="instructions"></textarea>
                 </label>
             </div>
@@ -180,17 +181,7 @@
             <label for="submitBtn" id="submitLabel"></label>
             <input onclick="orderConfirmation(); return false" id="submitBtn" name="submitBtn" type="submit"
                 value="Place Order">
-
-
             <div id="confirmation">
-            </div>
-            <div>Do NOT send the form to a new page upon form submission. Instead, use a JavaScript event handler to
-                produce a formatted output area on this same page showing:
-                the input values of the order (7 inputs = first name, email, phone, three selected fruits, and special
-                instructions),
-                the order date, and
-                the total amount of carbohydrates, protein, fat, sugar, and calories based upon the three fruit choices
-                selected on the form. Again, use the JSON fruit data to extract and sum up that information.
             </div>
         </form>
     </main>
