--- a/bountifulFoods/index.html
+++ b/bountifulFoods/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="styles/small.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
+    <link type="text/css" rel="stylesheet" href="styles/large.css">
     <title>Home | Bountiful Foods</title>
 </head>
 
@@ -38,7 +39,7 @@
     </header>
     <main>
 
-        <section class="section">
+        <section id="soCal" class="section">
             <h1>So Cal Born and Raised</h1>
             <img loading="lazy" src="images/carlsbad.jpg" alt="Picture of Carlsbad, California.">
             <p>
@@ -47,19 +48,17 @@
                 vibes!
             </p>
         </section>
-        <section>
+        <section id="ctaCtn">
             <div id="cta">
                 <a href="fresh.html">Make Your Own Fruit Drink Mix!</a>
             </div>
         </section>
-        <section class="section">
+        <section id="weather" class="section">
             <h1>Weather for Carlsbad</h1>
-            <div>
                 <p>Current Temperature: <span id="temp"></span> °F</p>
                 <p>Condition Description: <span id="currently"></span></p>
                 <p>Humidity: <span id="humidity"></span>%</p>
                 <p>3 Day Temperature Forecast (highs at 3:00pm PST): <span id="forecast"></span></p>
-            </div>
         </section>
     </main>
     <footer>
