--- a/bountifulFoods/about.html
+++ b/bountifulFoods/about.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="styles/normalize.css">
     <link type="text/css" rel="stylesheet" href="styles/small.css">
     <link type="text/css" rel="stylesheet" href="styles/medium.css">
+    <link type="text/css" rel="stylesheet" href="styles/large.css">
     <title>About Us | Bountiful Foods</title>
 </head>
 
@@ -38,7 +39,7 @@
     </header>
 
     <main>
-        <section class="section">
+        <section id="company" class="section">
             <h2>About Us:</h2>
             <img loading="lazy" class="logo" src="images/logo.png" alt="Bountiful Foods Logo">
             <p>Bountiful Foods is small business specializing in organic, locally grown foods. We have many food
@@ -46,7 +47,7 @@
                 directly from farms in the area, but also use some trusted, reputable national and international
                 suppliers of organic produce.</p>
         </section>
-        <section class="section">
+        <section id="carlsbad" class="section">
             <h2>About Carlsbad:</h2>
             <img loading="lazy" src="images/carlsbad-2.jpg" alt="Carlsbad, California">
             <p>In the 1880s a former sailor named John A. Frazier dug a well in the area. He began offering his
@@ -62,7 +63,7 @@
                 throughout San Diego County. However, the community survived on the back of its fertile agricultural
                 lands.</p>
         </section>
-        <section class="section">
+        <section id="contact-info" class="section">
             <h2>Points of Contact:</h2>
             <div class="contact-info">
                 <h3>Phone:</h3>
@@ -83,7 +84,7 @@
                     San Diego, California(CA), 92110</span>
             </div>
         </section>
-        <section>
+        <section id="map">
             <div id="small-map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13371.454991351271!2d-117.22550764067856!3d33.08636902594869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc0b1cc7921437%3A0xa809795dbf394fb7!2s3510%20Camino%20Cereza%2C%20Carlsbad%2C%20CA%2092009!5e0!3m2!1sen!2sus!4v1670893597766!5m2!1sen!2sus"
